# on-egin

./: .gitignore  AUTHORS  Doxyfile  INSTALATU  Makefile.in  Makefile~  OnEgin.kdev4  README.md  config.h  config.status  configure  configure.in  elkarte_gastronomikoa.kdevelop  elkarte_gastronomikoa.kdevelop.pcs  elkarte_gastronomikoa.kdevses  gnome_abiarazlea  instalatzailea  libtool
.kdev4/: OnEgin.kdev4
autom4te.cache/: output.0  output.1  (+2 more)
src/: Makefile  Makefile.am  Makefile.in  Pasahitza.c  Pasahitza.c.manex  Pasahitza.h  administratzailea.c  administratzailea.h  aldatu.c  aldatu.h  aukeraSartu.c  aukeraSartu.h  aukerak.c  aukerak.c.manex  aukerak.c~  aukerak.h  bazkideak.c  bazkideak.h  bestelakoak.c  bestelakoak.h  bodeganSartu.c  bodeganSartu.h  bodegatikElkartera.c  bodegatikElkartera.h  elkarte_gastronomikoa.c  elkartea.c  elkartea.h  faltak.c  faltak.h  faltakEguneratu.c  faltakEguneratu.h  faltatikZenbat.c  faltatikZenbat.h  faltenGestioa.c  faltenGestioa.h  gaiBerriaSartu.c  gaiBerriaSartu.h  galdera.c  galdera.h  gehiagoSartu.c  (+32 more)
src/.deps/: Pasahitza.Po  administratzailea.Po  aldatu.Po  aukeraSartu.Po  aukerak.Po  bazkideak.Po  bestelakoak.Po  bodeganSartu.Po  bodegatikElkartera.Po  elkarte_gastronomikoa.Po  elkartea.Po  faltak.Po  faltakEguneratu.Po  faltatikZenbat.Po  faltenGestioa.Po  gaiBerriaSartu.Po  galdera.Po  gehiagoSartu.Po  hornitzaileak.Po  irten.Po  kendu.Po  kodea.Po  konfigurazio_orokorra.Po  kontua.Po  kredituak.Po  modSarrera.Po  mugitu.Po  ordainketa.Po  sarrera_aukera.Po  sartuGaia.Po  zenbatUnitate.Po
src/irudiak/: logoa.xpm
(+46 files in other folders)
